[gd_scene load_steps=3 format=3 uid="uid://btfna526b0tbe"]

[ext_resource type="Script" uid="uid://bsn572rpwsnvn" path="res://menus/pause_menu.gd" id="1_s0u37"]
[ext_resource type="Texture2D" uid="uid://btuayljiol1pt" path="res://assets/paused.png" id="2_p1qj3"]

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_s0u37")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -4.0
offset_top = -18.0
offset_right = 4.0
offset_bottom = 18.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="PausedTitle" type="TextureRect" parent="VBoxContainer/MarginContainer"]
layout_mode = 2
texture = ExtResource("2_p1qj3")

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 20

[node name="Resume" type="Button" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "Resume"

[node name="Settings" type="Button" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "Settings"

[node name="MainMenu" type="Button" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "Main Menu"

[connection signal="pressed" from="VBoxContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/MainMenu" to="." method="_on_main_menu_pressed"]
